java/foreign/pthread/Threads.java asserts on debug build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • None
    • Affects Version/s: repo-panama
    • Component/s: tools

      The fix for JDK-8226250 checks the result of JavaThread::current() for NULL to see if this thread is attached to the VM or not. But this function will assert on a debug build when the result is NULL. Instead we should use Thread::current_or_null() if we expect a NULL result.

            Assignee:
            Nick Gasson
            Reporter:
            Nick Gasson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: