8227125: java/foreign/pthread/Threads.java asserts on debug build

Reviewed-by: mcimadamore